--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,3 +15,8 @@ command=/usr/local/bin/python /user_pinger/bot.py
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+
+[program:cron]
+command = cron -f -L 15
+autostart=true
+autorestart=true
